Add CompileTimeConstant statements
Add CompileTimeConstant statements to sql strings that shouldn’t be created from user inputs.